--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="manuscripts.html">Manuscript List</a>
                 <a href="sigla.html">Manuscript Sigla</a>
                 <a href="gallery.html">Gallery</a>
-                <a href="about.html">About</a>
+                <a href="about.html">Abbreviated Manuscripts</a>
 
             </div>
         </div>
