--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                     <li><a href="manuscript.html?id=90">Mscr.Dresd.A.61</a></li>
                 </ul>
 
-                <h3>Damage/missing sections</h3>
+                <h3>Damaged/missing sections</h3>
             <ul>
                 <li><a href="manuscript.html?id=64">MS 2</a></li>
             </ul>
