--- a/sigla.html
+++ b/sigla.html
@@ -22,7 +22,7 @@
     <nav id="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">×</a> <!-- Close button -->
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="abbreviations.html">About</a>
 
         <!-- Dropdown menu -->
         <div class="dropdown">
