--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
                 <a href="manuscripts.html">Manuscript List</a>
                 <a href="sigla.html">Manuscript Sigla</a>
                 <a href="gallery.html">Gallery</a>
-                <a href="about.html">About</a>
+                <a href="abbreviations.html">About</a>
             </div>
         </div>
     </nav>
