--- a/manuscript.html
+++ b/manuscript.html
@@ -22,7 +22,7 @@
     <nav id="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">×</a> <!-- Close button -->
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="abbreviations.html">About</a>
      
 
         <!-- Dropdown menu -->
@@ -32,6 +32,7 @@
                 <a href="manuscripts.html">Manuscript List</a>
                 <a href="sigla.html">Manuscript Sigla</a>
                 <a href="gallery.html">Gallery</a>
+                <a href="compare.html">Compare texts</a>
                 <!-- Add more options as needed -->
             </div>
         </div>
