--- a/manuscripts.html
+++ b/manuscripts.html
@@ -33,7 +33,8 @@
                     <a href="manuscripts.html">Manuscript List</a>
                     <a href="sigla.html">Manuscript Sigla</a>
                     <a href="gallery.html">Gallery</a>
-                    <a href="about.html">About</a>
+                    <a href="abbreviations.html">About</a>
+                    <a href="compare.html">Compare texts</a>
                     <!-- Add more options as needed -->
                 </div>
             </div>
