--- a/storage.html
+++ b/storage.html
@@ -32,7 +32,7 @@
                 <a href="sigla.html">Manuscript Sigla</a>
                 <a href="gallery.html">Gallery</a>
 
-                <a href="about.html">Abbreviated Texts</a>
+                <a href="abbreviations.html">Abbreviated Texts</a>
                 <!-- Add more options as needed -->
             </div>
         </div>
