--- a/compare.html
+++ b/compare.html
@@ -19,6 +19,8 @@
     <nav id="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">×</a>
         <a href="index.html">Home</a>
+        <a href="chapters.html">Text</a>
+
         
         <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown(event)">Manuscripts<span class="arrow">&#9662;</span></button>
