--- a/gallery.html
+++ b/gallery.html
@@ -20,6 +20,10 @@
     <nav id="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">×</a>
         <a href="index.html">Home</a>
+        <a href="chapters.html">Text</a>
+        <a href="compare.html">Compare texts</a>
+
+
         
         <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown(event)">Manuscripts<span class="arrow">&#9662;</span></button>
