--- a/manuscript.html
+++ b/manuscript.html
@@ -22,7 +22,10 @@
     <nav id="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">×</a> <!-- Close button -->
         <a href="index.html">Home</a>
-        <a href="abbreviations.html">About</a>
+        <a href="chapters.html">Text</a>
+        <a href="compare.html">Compare texts</a>
+
+
      
 
         <!-- Dropdown menu -->
@@ -32,7 +35,8 @@
                 <a href="manuscripts.html">Manuscript List</a>
                 <a href="sigla.html">Manuscript Sigla</a>
                 <a href="gallery.html">Gallery</a>
-                <a href="compare.html">Compare texts</a>
+                <a href="abbreviations.html">Abbreviations</a>
+
                 <!-- Add more options as needed -->
             </div>
         </div>
