--- a/manuscripts.html
+++ b/manuscripts.html
@@ -24,6 +24,10 @@
         <nav id="sidebar">
             <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">×</a> <!-- Close button -->
             <a href="index.html">Home</a>
+            <a href="chapters.html">Text</a>
+            <a href="compare.html">Compare texts</a>
+
+
             
     
             <!-- Dropdown menu -->
@@ -34,7 +38,6 @@
                     <a href="sigla.html">Manuscript Sigla</a>
                     <a href="gallery.html">Gallery</a>
                     <a href="abbreviations.html">About</a>
-                    <a href="compare.html">Compare texts</a>
                     <!-- Add more options as needed -->
                 </div>
             </div>
