--- a/storage.html
+++ b/storage.html
@@ -152,3 +152,88 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+compare text- smaller boxes 
+
+/* Text Viewer Container */
+.text-viewer {
+    display: flex;
+    gap: 20px;
+    margin: 20px;
+    flex-wrap: nowrap; /* Prevent stacking on smaller screens */
+    justify-content: space-between;
+}
+
+/* Text Box Styling */
+.text-box {
+    flex: 1;
+    max-width: 48%;
+    min-width: 300px; /* Ensure the text box doesn't shrink too much */
+    height: 400px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    overflow-y: auto;
+    transition: all 0.3s ease;
+}
+
+.text-box:hover {
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+}
+
+/* Dropdown Styling */
+.text-selector {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    font-size: 1.1em;
+    border: 1px solid #ccc;
+    background-color: #f9f9f9;
+    transition: all 0.3s ease;
+}
+
+.text-selector:hover,
+.text-selector:focus {
+    border-color: #3498db;
+    background-color: #fff;
+}
+
+/* Titles Styling */
+#text1-title, #text2-title {
+    margin-top: 0;
+    font-size: 1.6em;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+/* Content Styling */
+#text1-content, #text2-content {
+    font-size: 1.1em;
+    line-height: 1.8;
+    color: #555;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    /* No change to the text viewer, still side by side */
+    .text-viewer {
+        gap: 20px;
+    }
+    
+    /* No change to the text box */
+    .text-box {
+        max-width: 48%;  /* Keep the side-by-side layout */
+    }
+}
