--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
     <header>
         <div class="header-container">
             <h1 id="manuscript-head">
-                <a href="index.html"><i>De Regimine Principum</i></a>
+                <a href="index.html">De Regimine Principum</a>
             </h1>
+            
             
             <!-- Hamburger icon next to the title -->
             <div id="hamburger-icon" onclick="toggleSidebar()">☰</div>
