--- a/storage.html
+++ b/storage.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-container">
             <h1 id="manuscript-head">
-                <a href="index.html"><i>De Regimine Principum</i></a>
+                <a href="index.html"><i>Plerosque nimirum</i></a>
             </h1>
             
             <!-- Hamburger icon next to the title -->
